--- a/templates/header.html
+++ b/templates/header.html
@@ -56,7 +56,7 @@
             <a class="nav-link" href="{{ url_for('about') }}">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
+            <a class="nav-link" href="{{ url_for('contact_page') }}">Contact</a>
           </li>
         </ul>
       </div>
